--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,18 +1,3 @@
-/* .header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  border: 10px 20px;
-  gap: 312px;
-  position: absolute;
-  width: 100%;
-  height: 64px;
-  left: 0px;
-  top: 0px;
-  background: #111827;
-  color: white;
-} */
 nav {
   background: #111827;
   color: white;
@@ -171,4 +156,150 @@ p {
     width: 50%;
     padding: 10px;
   }
+}
+
+.productsBg {
+  background-color: red;
+}
+/*-----Products--------*/
+
+.productsHeader {
+  position: absolute;
+  width: 1193px;
+  height: 44px;
+  left: 60px;
+  top: 128px;
+  /* Typography/H4 */
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 137.5%;
+  /* identical to box height, or 44px */
+
+  letter-spacing: 0px;
+  text-align: left;
+}
+
+.productsTypo {
+  /* Products */
+
+  position: absolute;
+  width: 1193px;
+  height: 44px;
+  left: 60px;
+  top: 128px;
+
+  /* Typography/H4 */
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 137.5%;
+  /* identical to box height, or 44px */
+
+  /* Text/Primary */
+
+  color: #111827;
+}
+
+.selectPrice {
+  /* BG */
+
+  box-sizing: border-box;
+
+  position: absolute;
+  width: 179px;
+  height: 40px;
+  left: 1065px;
+  top: 132px;
+
+  background: #ffffff;
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
+}
+
+.addProductBtn {
+  /* BG */
+
+  position: absolute;
+  width: 133px;
+  height: 40px;
+  left: 1254px;
+  top: 132px;
+
+  background: #5048e5;
+  border-radius: 4px;
+
+  height: 40px;
+  width: 133px;
+  left: 1254px;
+  top: 132px;
+  border-radius: 4px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 137.5%;
+  /* or 19px */
+
+  color: #ffffff;
+}
+
+.productsContainer {
+  /* Rectangle 3 */
+
+  position: absolute;
+  width: 1323px;
+  height: 682px;
+  left: 60px;
+  top: 196px;
+
+  background: #ffffff;
+  border-radius: 4px;
+}
+
+/*-----Product--------*/
+
+.card-item {
+  box-sizing: border-box;
+
+  position: absolute;
+  width: 242px;
+  height: 303px;
+
+  background: #ffffff;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+}
+
+.card-img {
+  position: absolute;
+  width: 218px;
+  height: 198px;
+
+  background: #c4c4c4;
+}
+
+.card-title {
+  position: absolute;
+  width: 191px;
+  height: 21px;
+  left: 91px;
+  top: 437px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  /* or 171% */
+
+  display: flex;
+  align-items: center;
+
+  color: #6b7280;
 }
